# OceanEcoMapServer

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  buildspec.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  test_main.py  utils.py
app/config/: config.py  import_secrets_AWS.py
app/constants/: geo.py  spec.py
app/core/: request.py
app/db/: connect.py  models.py
app/routes/: aoi.py  job.py  model.py  prediction_request.py  predictions.py  routes.py  satellite.py  scl.py  test_routes.py
app/services/: sh_catalog.py  tile_service.py  utils.py
app/types/: helpers.py
cdk/: cdk.py  fastapi_stack.py
cdk/cdk.out/: FastAPIStack.assets.json  FastAPIStack.template.json  manifest.json  tree.json
