[tool.poetry]
name = "ocean-eco-map-server"
version = "0.1.0"
description = ""
authors = ["emely3h <emely3h@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
server-run-dev = ""
server-run-prod = ""

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
geoalchemy2 = "^0.14.1"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.0"
aws-cdk-aws-codestar-alpha = "^2.101.1a0"
aws-cdk-lib = "^2.101.1"
sqlalchemy-stubs = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
