[tool.poetry]
name = "ocean-eco-map-server"
version = "0.1.0"
description = ""
authors = ["emely3h <emely3h@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
server-run-dev = "app.scripts.run_server_dev:main"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
geoalchemy2 = "^0.14.1"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.0"
aws-cdk-aws-codestar-alpha = "^2.101.1a0"
aws-cdk-lib = "^2.101.1"
sqlalchemy-stubs = "^0.4"
httpx = "^0.27.0"
pytest = "^8.1.1"
sentinelhub = "^3.10.1"
geojson-pydantic = "^1.0.2"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
folium = "^0.16.0"
psycopg2-binary = "^2.9.9"
pyproj = "^3.6.1"
boto3 = "^1.34.106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
